[tool.poetry]
name = "web-hw09"
version = "0.1.0"
description = ""
authors = ["Yevheniy Petrenko <yevheniipetrenko92@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw09"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"
scrapyscript = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
